Mon Mar 22 15:41:47 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: fix descrec test

Wed Mar  3 09:08:14 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/write.c: compute length supporting all character sets

Tue Mar  2 16:40:46 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/common.h:
	* src/odbc/unittests/descrec.c:
	- add a test for SQLGetDescRec/SQLSetDescRec and fix a small issue
	  in SQLGetDescRec

Tue Mar  2 16:06:34 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/error.c src/odbc/unittests/getdata.c:
	* src/odbc/unittests/paramcore.c src/odbc/unittests/print.c:
	* src/odbc/unittests/rowset.c src/odbc/unittests/transaction2.c:
	- add ReadError and reuse it

Tue Mar  2 09:32:02 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/util.c:
	- remove last exit calls (original patch from David Dick)

Mon Mar  1 15:52:14 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c: fix FreeTDS detection

Mon Mar  1 15:50:06 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/prepclose.c src/odbc/unittests/timeout3.c:
	* src/odbc/unittests/timeout4.c:
	- update for future implementations

Mon Mar  1 15:32:43 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c: ported freeclose test to Windows

Mon Mar  1 13:37:28 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c src/tds/net.c src/tds/token.c:
	- remove some exit calls (original patch from David Dick)

Fri Feb 12 11:15:46 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsthread.h src/dblib/bcp.c src/tds/sspi.c:
	* src/tds/win_mutex.c:
	- remove some warnings compiling for windows

Fri Feb 12 10:04:15 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>