@@ -1,3 +1,6 @@
+Sat Apr  3 06:57:18 EDT 2010	JK Lowden <jklowden@freetds.org>
+	* src/apps/bsqldb.c Support TEXT datatype
+
 Mon Mar 22 15:41:47 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/odbc.c: fix descrec test
 
@@ -2365,4 +2368,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.3000 2010-03-22 14:42:16 freddy77 Exp $
+$Id: ChangeLog,v 1.3001 2010-04-03 12:36:45 jklowden Exp $
